mypy-fancy.txt
src/jobsearch/cadremploi_scraper.py: note: In function "extract_json_ld":
src/jobsearch/cadremploi_scraper.py:43:35: error: Missing type parameters fo...
"dict"  [type-arg]
    def extract_json_ld(html: str) -> dict | None:
                                      ^
src/jobsearch/cadremploi_scraper.py: note: In function "parse_job_posting":
src/jobsearch/cadremploi_scraper.py:65:32: error: Missing type parameters fo...
"dict"  [type-arg]
    def parse_job_posting(json_ld: dict, url: str) -> dict:
                                   ^

